--- a/frontend/src/ui/components/Gpt/ChatInput/ChatInput.styles.scss
+++ b/frontend/src/ui/components/Gpt/ChatInput/ChatInput.styles.scss
@@ -9,9 +9,18 @@
     line-height: $px20;
     margin-top: 0;
     max-height: 220px;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
     overflow: scroll;
     padding: $px10;
     resize: none;
+    /* IE and Edge */
+    scrollbar-width: none;
     width: $pct100;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.chatInput>textarea::-webkit-scrollbar {
+    display: none;
 }
 
