--- a/frontend/src/ui/components/Table/Table.styles.scss
+++ b/frontend/src/ui/components/Table/Table.styles.scss
@@ -3,8 +3,17 @@
 .tableWrapper {
     border-radius: $rem50pct;
     margin: auto;
-    max-width: calc($vw85 - $px100);
+    max-width: $vw85;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
     overflow: scroll;
+    /* IE and Edge */
+    scrollbar-width: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.tableWrapper::-webkit-scrollbar {
+    display: none;
 }
 .table {
     border-collapse: separate;
